--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -63,7 +63,17 @@ li {
   }
 
  .barba-container {
-    background-color: #333;
+    background:#fff;
+    overflow-x: hidden;
+    padding: 3rem 3rem 0rem 3rem;
+  }
+
+  #body-content-wrapper {
+    z-index:1;
+    position:relative;
+    //box-shadow:0px 0px 40px rgba(0,0,0,0.8);
+    background-color: #fef8f3;
+    
   }
 
 
@@ -77,15 +87,6 @@ p {
 
  svg:not(:root) {
   overflow: hidden;
-}
-
-#body-content-wrapper {
-  z-index:1;
-  position:relative;
-  box-shadow:0px 0px 40px rgba(0,0,0,0.8);
-  background:#333;
-  overflow-x: hidden
-
 }
 
 .icon {
