--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -3,12 +3,12 @@
   .about {
     position: relative;
     text-align: center;
-    padding: 3.25rem 8rem;
-    border-top: 1px solid #333;
-    border-bottom: 1px solid #333;
+    padding: 4.25rem 8rem;
+    //border-top: 1px solid #333;
+    //border-bottom: 1px solid #333;
     z-index: 2;
     background-color: transparent !important;
-    //margin-top: -1px;
+    margin-top: -1px;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 
     @include respond(phone-land) {
