--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -1,16 +1,16 @@
 footer{
     position:relative;
     z-index:0;
-    height:400px;
+    height:500px;
     text-align:center;
-    background-color: #333;
+    background-color: #fff;
     background-attachment:fixed;
 
     @include respond(phone) {
         height: 500px;
     }
 }
-footer .footer{
+footer .footer {
     position:absolute;
     -webkit-transform-style:preserve-3d;
     transform-style:preserve-3d;
@@ -21,12 +21,12 @@ footer .footer{
     position:fixed;
     bottom:0px;
     width: 95%;
-    height:400px;
+    height:500px;
     padding-top: 15rem;
     text-align:center;
 
     
-    border-top: 1px solid $color-grey-dark-3;
+    //border-top: 1px solid $color-grey-dark-3;
     font-size: 1.4rem;
     color: $color-grey-light-1;
     //padding: 20rem 3rem 14rem 3rem;
@@ -109,6 +109,17 @@ footer .footer{
           float: none;
       }
     }
+}
+
+#footer__vector {
+    position: absolute;
+    top: -40rem;
+    left: 0;
+    z-index: -5;
+}
+
+#pull-down {
+    padding-top: 15rem;
 }
 
   
