--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -89,13 +89,14 @@
   .projects {
     font-family: 'Source Sans Pro', sans-serif !important; 
     text-transform: uppercase;
-    font-size: 1.3rem !important;
+    font-size: 1.6rem !important;
     font-weight: 700 !important;
     color: #f95759 !important;   
     width: 25%;
     margin: 0 auto;
     height: 6rem;
-    padding-top: 2rem;
+    margin-top: -.56rem;
+    //padding-top: 2rem;
     //border-top: 1px solid #777;
     letter-spacing: 3.12px;
     cursor: pointer;
