--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -11,7 +11,7 @@
 .button-bar {
   height: 5rem;
   color: #fff;
-  border-top: 1px solid #555;
+  //border-top: 1px solid #555;
   position: relative;
   z-index: 111;
 }
@@ -27,8 +27,8 @@ button {
   border: none;
   font-family: inherit;
   font-size: inherit;
-  color: #fff;
-  background: none;
+  color: $color-grey-dark-3;
+  //background: $color-grey-light-2;
   cursor: pointer !important;
   padding: 1.7rem 2.2rem 1.7rem 2.2rem !important;
   display: inline-block;
@@ -49,7 +49,7 @@ button {
     background-color: rgba(63, 63, 63, 0.5);
   }
   &:active {
-    background-color: rgb(36, 36, 35);
+    background-color: $color-grey-light-1;
   }
 
   @include respond(phone) {
@@ -72,5 +72,5 @@ button:after {
 .button-bar button.button-bar-toggle-btn-active,
 .button-bar button.button-bar-sort-btn-active {
   color: #0e83cd;
-  background: #333;
+  background: $color-grey-light-2;
 }
