--- a/app/assets/styles/components/_ta-overlay.scss
+++ b/app/assets/styles/components/_ta-overlay.scss
@@ -184,8 +184,6 @@ p{
 
 .menu{
     position:absolute;
-    top: 1rem;
-    right: 8rem;
     z-index:1003;
     outline:none;
     -webkit-tap-highlight-color:transparent;
@@ -194,14 +192,22 @@ p{
     cursor: pointer;
     pointer-events: auto;
     opacity: 0;
+    height: 7rem;
+    width: 7rem;
+    //position: fixed;
+    top: 1rem;
+    right: 7rem;
     
 }
 .menu-icon-line{
+    position: relative;
+    top: 1.4rem;
+    left: .8rem;
     display:block;
     height:2px;
-    width:100%;
-    background-color:#a5acbc;
-    margin-bottom:4px;
+    width:70%;
+    background-color: $color-grey-dark-3;
+    margin-bottom:8px;
     border-radius:2px;
     color: #fff;
 	//box-shadow: -.1px .1px .1px #ffc, .1px -.1px .1px #fff;
@@ -210,23 +216,23 @@ p{
     transform:translateZ(0)
 }
 .menu:hover>.menu-icon-line{
-    background-color:#8591ac;
+    background-color: $color-grey-dark-3;
     -webkit-transform:scaleX(1.1);
     transform:scaleX(1.1)
 }
 .menu-active>.menu-icon-line-1,.menu-active:hover>.menu-icon-line-1{
-    -webkit-transform:translateY(6px) rotateZ(-135deg);
-    transform:translateY(6px) rotateZ(-135deg);
-    background-color:#fff
+    -webkit-transform:translateY(7px) rotateZ(-135deg);
+    transform:translateY(7px) rotateZ(-135deg);
+    background-color:$color-white;
 }
 .menu-active>.menu-icon-line-2,.menu-active:hover>.menu-icon-line-2{
     opacity:0;
-    background-color:#fff
+    background-color:#fff;
 }
 .menu-active>.menu-icon-line-3,.menu-active:hover>.menu-icon-line-3{
-    -webkit-transform:translateY(-6px) rotateZ(135deg);
-    transform:translateY(-6px) rotateZ(135deg);
-    background-color:#fff
+    -webkit-transform:translateY(-13px) rotateZ(135deg);
+    transform:translateY(-13px) rotateZ(135deg);
+    background-color:$color-white;
 }
 .blog-header>.menu{
     top:27px;
