--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -32,6 +32,7 @@
   text-transform: uppercase;
   padding-top: 10em;
   padding-bottom: 11em;
+  text-rendering: optimizeLegibility;
   
 }
 
@@ -53,6 +54,7 @@
   font-weight: 100;
   letter-spacing: .42rem;
   font-family: 'FuturaStd-ExtraBold', sans-serif;
+  text-shadow: 0px 0px 8px rgba(0,0,0,.1);
 
   @include respond(phone) {
     font-size: 6rem;
