--- a/app/assets/styles/components/_header-bg.scss
+++ b/app/assets/styles/components/_header-bg.scss
@@ -54,7 +54,7 @@ header .devicons-list-container {
 		margin: 40px;
 		padding: 10px;
 		float: left;
-		background: orange;
+		background: $color-secondary-light;
 		border-radius: 6px;
 		opacity: 1;
 		border-bottom: 2px solid #8d8d8d;
