--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -7,7 +7,7 @@
     //border-top: 1px solid #333;
     //border-bottom: 1px solid #333;
     z-index: 2;
-    background-color: transparent !important;
+    background-color: $color-white;
     margin-top: -1px;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 
