--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -63,6 +63,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  //background: rgba($color-white, .1);
   transform: translate(-50%, -50%);
   text-align: center;
   width: 85%;
