--- a/app/assets/styles/components/_ta-overlay.scss
+++ b/app/assets/styles/components/_ta-overlay.scss
@@ -182,7 +182,7 @@ p{
 	pointer-events: none;
 }
 
-.menu{
+.menu {
     position:absolute;
     z-index:1003;
     outline:none;
@@ -195,45 +195,117 @@ p{
     height: 7rem;
     width: 7rem;
     //position: fixed;
-    top: 1rem;
-    right: 7rem;
+    top: 2rem;
+    right: 2rem;
+
+    &__button {
+        background-color: $color-white;
+        height: 7rem;
+        width: 7rem;
+        position: fixed;
+        top: 3.5rem;
+        right: 3.5rem;
+        border-radius: 50%;
+        z-index: 2000;
+        box-shadow: 0 1rem 3rem rgba($color-black, .1);
+        text-align: center;
+        cursor: pointer;
+
+        @include respond(tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+
+        @include respond(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
+    }
+
+        //ICON
+        &__icon {
+            position: relative;
+            margin-top: 3.5rem;
+    
+            &,
+            &::before,
+            &::after {
+                width: 3rem;
+                height: 2px;
+                background-color: $color-grey-dark-3;
+                display: inline-block;
+            }
+    
+            &::before,
+            &::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                transition: all .2s;
+            }
+    
+            &::before { top: -.8rem; }
+            &::after { top: .8rem; }
+        }
+    
+        &__button:hover &__icon::before {
+            top: -1rem;
+        }
+    
+        &__button:hover &__icon::after {
+            top: 1rem;
+        }
+    
+        &.menu-active > &__button &__icon {
+            background-color: transparent;
+        }
+    
+        &.menu-active > &__button &__icon::before {
+            top: 0;
+            transform: rotate(135deg);
+        }
+    
+        &.menu-active > &__button &__icon::after {
+            top: 0;
+            transform: rotate(-135deg);
+        }
     
 }
-.menu-icon-line{
-    position: relative;
-    top: 1.4rem;
-    left: .8rem;
-    display:block;
-    height:2px;
-    width:70%;
-    background-color: $color-grey-dark-3;
-    margin-bottom:8px;
-    border-radius:2px;
-    color: #fff;
-	//box-shadow: -.1px .1px .1px #ffc, .1px -.1px .1px #fff;
-    -webkit-transition:transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.1s,opacity 0.1s ease-in-out 0.1s;
-    transition:transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.1s,opacity 0.1s ease-in-out 0.1s;
-    transform:translateZ(0)
-}
-.menu:hover>.menu-icon-line{
-    background-color: $color-grey-dark-3;
-    -webkit-transform:scaleX(1.1);
-    transform:scaleX(1.1)
-}
-.menu-active>.menu-icon-line-1,.menu-active:hover>.menu-icon-line-1{
-    -webkit-transform:translateY(7px) rotateZ(-135deg);
-    transform:translateY(7px) rotateZ(-135deg);
-    background-color:$color-white;
-}
-.menu-active>.menu-icon-line-2,.menu-active:hover>.menu-icon-line-2{
-    opacity:0;
-    background-color:#fff;
-}
-.menu-active>.menu-icon-line-3,.menu-active:hover>.menu-icon-line-3{
-    -webkit-transform:translateY(-13px) rotateZ(135deg);
-    transform:translateY(-13px) rotateZ(135deg);
-    background-color:$color-white;
-}
+// .menu-icon-line{
+//     position: relative;
+//     top: 1.4rem;
+//     left: .8rem;
+//     display:block;
+//     height:2px;
+//     width:70%;
+//     background-color: $color-grey-dark-3;
+//     margin-bottom:8px;
+//     border-radius:2px;
+//     color: #fff;
+// 	//box-shadow: -.1px .1px .1px #ffc, .1px -.1px .1px #fff;
+//     -webkit-transition:transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.1s,opacity 0.1s ease-in-out 0.1s;
+//     transition:transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.1s,opacity 0.1s ease-in-out 0.1s;
+//     transform:translateZ(0)
+// }
+// .menu:hover>.menu-icon-line{
+//     background-color: $color-grey-dark-3;
+//     -webkit-transform:scaleX(.9);
+//     transform:scaleX(.9)
+// }
+// .menu-active>.menu-icon-line-1,.menu-active:hover>.menu-icon-line-1{
+//     -webkit-transform:translateY(7px) rotateZ(-135deg);
+//     transform:translateY(7px) rotateZ(-135deg);
+//     background-color:$color-white;
+// }
+// .menu-active>.menu-icon-line-2,.menu-active:hover>.menu-icon-line-2{
+//     opacity:0;
+//     background-color:#fff;
+// }
+// .menu-active>.menu-icon-line-3,.menu-active:hover>.menu-icon-line-3{
+//     -webkit-transform:translateY(-13px) rotateZ(135deg);
+//     transform:translateY(-13px) rotateZ(135deg);
+//     background-color:$color-white;
+// }
 .blog-header>.menu{
     top:27px;
     left:23px
