--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -63,16 +63,15 @@ li {
   }
 
  .barba-container {
-    background:#fef8f3;
-    
-    padding: 3rem 3rem 0rem 3rem;
+    background:#fff;
+    padding: 3rem;
   }
 
   #body-content-wrapper {
     z-index:1;
     position:relative;
     //box-shadow:0px 0px 40px rgba(0,0,0,0.8);
-    background-color: #fef8f3;
+    background-color: #f7f7f7; 
     
   }
 
