--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -1,15 +1,32 @@
-footer{
+footer {
     position:relative;
     z-index:0;
-    height:500px;
+    height:600px;
+    width: 100%;
     text-align:center;
     //background-color:#a8d0e6;
+    background-image: url('../../../assets/images/waves.svg');
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
     background-attachment:fixed;
+
 
     @include respond(phone) {
         height: 500px;
     }
+
+    // &__container {
+    //     position: absolute;
+    //     background: white;
+    //     //padding-bottom: 100px;
+    //     left: 0;
+    //     bottom: 0;
+    //     background-color: #F4F4F4;
+    //     border-top: 1px solid rgba(0,0,0,0.07);
+    // }
 }
+
 footer .footer {
     position:absolute;
     -webkit-transform-style:preserve-3d;
@@ -19,7 +36,7 @@ footer .footer {
     -ms-transform:translateX(-50%);
     transform:translateX(-50%);
     position:fixed;
-    bottom:0px;
+    bottom: 0rem;
     width: 96.0665%;
     height:500px;
     //padding-top: 15rem;
@@ -111,16 +128,17 @@ footer .footer {
     }
 }
 
-#footer__vector {
-    position: absolute;
-    top: -43rem;
-    left: 0;
-    z-index: -5;
+// #footer__vector {
+//     position: absolute;
+//     top: 0rem;
+//     //bottom: 3rem;
+//     left: 0;
+//     z-index: -5;
 
-}
+// }
 
 #pull-down {
-    padding-top: 33rem;
+    padding-top: 25rem;
 }
 
   
