--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -14,6 +14,7 @@ body {
   //box-sizing: border-box;
   // padding: 3rem;
   background-color: rgb(51, 51, 51);
+  overflow-y: hidden; /* prevent body overflow with when mixitup targets are filtered */
 }
 
 a {
@@ -65,6 +66,7 @@ li {
  .barba-container {
     background:#fff;
     padding: 3rem;
+    
   }
 
   #body-content-wrapper {
