--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -11,10 +11,15 @@
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-  //box-sizing: border-box;
-  // padding: 3rem;
+  box-sizing: border-box;
   background-color: rgb(51, 51, 51);
   overflow-y: hidden; /* prevent body overflow with when mixitup targets are filtered */
+
+}
+
+.container {
+  padding: 3rem;
+  background: #f7f7f7;
 }
 
 a {
@@ -49,6 +54,7 @@ li {
     //This defines what 1rem is
     font-size: 62.5%; //1rem = 10px; 10px/16px = 62.5%
     overflow-x: hidden;
+
     // @include respond(tab-land) { // width < 1200?
     //   font-size: 56.25%;
     // }
@@ -74,7 +80,7 @@ li {
     position:relative;
     //box-shadow:0px 0px 40px rgba(0,0,0,0.8);
     background-color: #f7f7f7; 
-    
+    height: 100%;
   }
 
 
