--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -128,14 +128,10 @@ footer .footer {
     }
 }
 
-// #footer__vector {
-//     position: absolute;
-//     top: 0rem;
-//     //bottom: 3rem;
-//     left: 0;
-//     z-index: -5;
-
-// }
+#footer__vector {
+    width: 100%;
+    height: 500px;
+}
 
 #pull-down {
     padding-top: 25rem;
