refactor ta_overlay js to solve overflow issues on mixitup filtering and ta_overlay scroll and add overflow: hidden to box1 so as not to click and drag header animation

--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -12,6 +12,7 @@
   background-position: left center;
   position: relative;
   opacity: 0;
+  overflow: hidden;
 
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
