--- a/app/assets/styles/base/_animations.scss
+++ b/app/assets/styles/base/_animations.scss
@@ -43,6 +43,32 @@
         opacity: 0
     }
 }
+
+@-webkit-keyframes rotateplane{
+    0%{
+        -webkit-transform:perspective(120px)
+    }
+    50%{
+        -webkit-transform:perspective(120px) rotateY(180deg)
+    }
+    100%{
+        -webkit-transform:perspective(120px) rotateY(180deg) rotateX(180deg)
+    }
+}
+@keyframes rotateplane{
+    0%{
+        -webkit-transform:perspective(120px) rotateX(0) rotateY(0);
+        transform:perspective(120px) rotateX(0) rotateY(0)
+    }
+    50%{
+        -webkit-transform:perspective(120px) rotateX(-180.1deg) rotateY(0);
+        transform:perspective(120px) rotateX(-180.1deg) rotateY(0)
+    }
+    100%{
+        -webkit-transform:perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        transform:perspective(120px) rotateX(-180deg) rotateY(-179.9deg)
+    }
+}
   
  
 
