--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -1,72 +1,68 @@
-  /* About Section */
-  
-  .about {
-    position: relative;
-    text-align: center;
-    padding: 4.25rem 8rem;
-    //border-top: 1px solid #333;
-    //border-bottom: 1px solid #333;
-    z-index: 2;
-    background-color: $color-white;
-    margin-top: -1px;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+/* About Section */
 
-    @include respond(phone-land) {
-      padding: .1rem 2rem;
-      }
+.about {
+  position: relative;
+  text-align: center;
+  padding: 4.25rem 8rem;
+  //border-top: 1px solid #333;
+  //border-bottom: 1px solid #333;
+  z-index: 2;
+  background-color: $color-white;
+  margin-top: -1px;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 
-      @include respond(phone) {
-        padding: 3rem 2rem;
-      }
+  @include respond(phone-land) {
+    padding: 0.1rem 2rem;
   }
 
-  .bio {
-    font-family: 'Georgia', serif;
-    //font-family: 'FuturaStd-Book', sans-serif;
-    // font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
-    text-align: center;
-    line-height: 1.3em;
-    width: auto;
-    max-width: 780px;
-    display: block;
-    text-rendering: optimizelegibility;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 0;
-    padding-right: 0;
-    color: #fff;
-    font-size: 1.75rem;
-    padding-bottom: 1.25rem;
+  @include respond(phone) {
+    padding: 3rem 2rem;
   }
+}
 
-  .coding {
-    margin: 0 auto;
-    display: block;
-    padding-left: 0;
-    padding-right: 0;
-    height: 300px;
-    width: 300px;
-    background-size: cover;
-    background-image: url('../../../assets/images/coding.svg');
-    background-repeat: no-repeat;
-    margin-bottom: 2.75rem;
-  }
+.bio {
+  font-family: "Georgia", serif;
+  text-align: center;
+  line-height: 1.3em;
+  width: auto;
+  max-width: 780px;
+  display: block;
+  text-rendering: optimizelegibility;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+  color: #fff;
+  font-size: 1.75rem;
+  padding-bottom: 1.25rem;
+}
 
-  .profile-foto {
-    margin: 0 auto;
-    display: block;
-    padding-left: 0;
-    padding-right: 0;
-    height: 300px;
-    width: 300px;
-    border: 10px solid white;
-    border-radius: 50%;
-    background-size: cover;
-    background-image: url('../../../assets/images/profile-foto.jpg');
-    background-repeat: no-repeat;
-    margin-bottom: 2.75rem;
-    box-shadow: 0 2px 4px -1px rgba(0,0,0,0.06), 0 4px 5px 0 rgba(0,0,0,0.06), 0 1px 10px 0 rgba(0,0,0,0.08);
-  }
-  
-  /*#about {display: block; position: relative; top: 60px;}
-  */
+.coding {
+  margin: 0 auto;
+  display: block;
+  padding-left: 0;
+  padding-right: 0;
+  height: 300px;
+  width: 300px;
+  background-size: cover;
+  background-image: url("../../../assets/images/coding.svg");
+  background-repeat: no-repeat;
+  margin-bottom: 2.75rem;
+}
+
+.profile-foto {
+  margin: 0 auto;
+  display: block;
+  padding-left: 0;
+  padding-right: 0;
+  height: 300px;
+  width: 300px;
+  border: 10px solid white;
+  border-radius: 50%;
+  background-size: cover;
+  background-image: url("../../../assets/images/profile-foto.jpg");
+  background-repeat: no-repeat;
+  margin-bottom: 2.75rem;
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.06),
+    0 4px 5px 0 rgba(0, 0, 0, 0.06), 0 1px 10px 0 rgba(0, 0, 0, 0.08);
+}
