--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -16,15 +16,6 @@ footer {
         height: 500px;
     }
 
-    // &__container {
-    //     position: absolute;
-    //     background: white;
-    //     //padding-bottom: 100px;
-    //     left: 0;
-    //     bottom: 0;
-    //     background-color: #F4F4F4;
-    //     border-top: 1px solid rgba(0,0,0,0.07);
-    // }
 }
 
 footer .footer {
@@ -128,9 +119,9 @@ footer .footer {
     }
 }
 
-#footer__vector {
-    transform: scale(.7);
-}
+// #footer__vector {
+//     transform: scale(.7);
+// }
 
 #pull-down {
     padding-top: 25rem;
