refactor and tidy up html, scss and js a la natours

--- a/app/assets/styles/components/_project-box.scss
+++ b/app/assets/styles/components/_project-box.scss
@@ -1,5 +1,9 @@
 /* Box Hover Image Animation */
 
+.project-section {
+  padding: 15rem 0;
+}
+
 /* preserve aspect ratio box for project box grid */
 .box {
   position: relative;
