--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -15,182 +15,37 @@
 }
 
 html {
-  //This defines what 1rem is
-  font-size: 62.5%; //1rem = 10px; 10px/16px = 62.5%
+  // This defines what 1rem is
+  font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
   overflow-x: hidden;
 
-  // @include respond(tab-land) { // width < 1200?
-  //   font-size: 56.25%;
-  // }
+  @include respond(tab-land) { // width < 1200?
+      font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+  }
 
-  // @include respond(tab-port) { // width < 900?
-  //   font-size: 50%;
-  // }
-
+  @include respond(tab-port) { // width < 900?
+      font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+  
   @include respond(big-desktop) {
-    font-size: 75%;
+      font-size: 75%; //1rem = 12, 12/16
   }
 }
 
 body {
   box-sizing: border-box;
-  //background-color: rgb(51, 51, 51);
-}
-
-.container {
-  padding: 3rem;
-  background: #f7f7f7;
-  overflow-y: hidden; /* prevent body overflow when mixitup targets are filtered */
-}
-
-#body-content-wrapper {
-  z-index: 1;
-  position: relative;
-  //box-shadow:0px 0px 40px rgba(0,0,0,0.8);
-  background-color: #f7f7f7;
-  height: 100%;
-}
-
-section {
-  position: relative;
-  z-index: 95;
-  //pointer-events: none;
-}
-
-a {
-  text-decoration: none;
-  //color: rgba(255,255,255,0.5);
-  color: #f95759;
-  outline: 0;
-  text-decoration: none !important;
-}
-
-a:hover, a:active, a:focus {
-  color: rgba(249, 87, 89, 0.5);
-  outline: 0;
-  text-decoration: none !important;
-  transition: all 150ms ease;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  list-style: none;
-}
-
-p {
-  margin: 0 auto;
-}
-
-/* Hide the overflow in IE. */
-svg:not(:root) {
-  overflow: hidden;
-}
-
-.icon {
-  background-size: 90px;
-  width: 21.5px;
-  height: 24px;
-  background-repeat: no-repeat;
-}
-
-.social-icons {
-  text-align: center;
-  transform: scale(1.3);
-  position: relative;
-  //padding-top: 4rem;
-
-  @include respond(phone) {
-    padding-top: 4rem;
-  }
-}
-
-.social-icons__icon {
-  display: inline-block;
-  margin: 0 5px 5px 5px !important;
-  width: 72px;
-  height: 72px;
   position: relative;
 
-  @include respond(big-desktop) {
-    margin: 0 60px 5px 5px !important;
-  }
-
-  @include respond(tab-land) {
-    width: 70px;
-  }
-
-  @include respond(ipad-port) {
-    width: 32px;
+  @include respond(tab-port) {
+      padding: 0;
   }
 }
 
-.social-icons__icon .icon {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
+// ::selection {
+//   background-color: $color-primary;
+//   color: $color-white;
+// }
 
-.icon--twitter,
-.icon--linkedin-in,
-.icon--medium,
-.icon--github,
-.icon--envelope {
-  transition: all 0.2s;
 
-  &:hover,
-  &:active {
-    opacity: 0.6;
-  }
-}
-
-.icon--twitter {
-  width: 24px;
-  height: 24px;
-}
-
-.icon--linkedin-in {
-  width: 20.85px;
-  height: 24px;
-}
-
-.icon--github {
-  width: 23.75px;
-  height: 24px;
-}
-
-.icon--angle-down {
-  width: 26.5px;
-  height: 30px;
-}
-
-.icon--envelope {
-  width: 24px;
-  height: 24px;
-}
-
-.icon--heart {
-  width: 27px;
-  height: 24px;
-  background-position: 0 0;
-  //transform: scale(.3);
-  display: inline-block !important;
-  position: relative !important;
-  top: 8px !important;
-  left: 0px !important;
-  transition: all 0.2s;
-  -webkit-filter: drop-shadow(0px 0px 4px rgba(247, 87, 89, 0.8));
-
-  &:hover {
-    -webkit-filter: drop-shadow(0px 0px 4px rgba(247, 87, 89, 0.8));
-    cursor: pointer;
-  }
-}
 
 
