--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -42,6 +42,8 @@
   line-height: 1.6em;
   letter-spacing: 0.5em;
   display: inline-block;
+  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 .main-headline-r2 {
