--- a/app/assets/styles/components/_header-bg.scss
+++ b/app/assets/styles/components/_header-bg.scss
@@ -4,8 +4,8 @@
   min-height: 100vh;
   background-image: linear-gradient(
     to right bottom,
-    rgba(51, 51, 51, 0.8),
-    rgba(255, 255, 255, 0.8)
+    rgba($color-tertiary-light, 0.6),
+    rgba($color-white, 0.6)
   );
   background-size: cover;
   background-position: top;
@@ -32,20 +32,20 @@ header .devicons-list-container {
   right: 0;
   z-index: 0;
   overflow: hidden;
-  height: 1200px;
-  width: 6000px;
+  height: 2700px;
+  width: 4100px;
   -webkit-animation: cascade 500s linear infinite;
   animation: cascade 500s linear infinite;
 }
 
 .devicon {
   font-size: 25rem;
-  // speak: none;
-  // font-style: normal;
-  // font-weight: normal;
-  // font-variant: normal;
-  // text-transform: none;
-  // line-height: 1;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 }
 
 header i {
