--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -1,62 +1,29 @@
-.box1 {
-  display: flex;
-  flex: 1;
-  float: none !important;
-  height: 100vh;
+.header {
+  height: 85vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba($color-tertiary-light, .6),
-      rgba($color-white, 0.6)
-    );
+      rgba($color-tertiary-light, 0.6),
+      rgba($color-white, 0.6));
   background-size: cover;
-  background-position: left center;
+  background-position: top;
   position: relative;
   opacity: 0;
-  overflow: hidden;
+  
 
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    height: 94vh;
-    z-index: 1;
-}
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+      height: 95vh;
+  }
 
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
           only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
           only screen and (min-width: 125em) {
       background-image: linear-gradient(
           to right bottom,
-          rgba($color-grey-dark-3, 0.8),
-          rgba($color-grey-dark, 0.8));
+          rgba($color-tertiary-light, 0.6),
+          rgba($color-white, 0.6));
   }
-
-  @include respond(phone) {
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-}
-}
-
-.box1::before {
-  content: "";
-  display: block;
-  height: 0;
-  padding-top: 591.44px / 1127.34px * 100%; //0.52463320737
-
-  @include respond(hires-desktop) {
-    padding-top: 52.462%;
-  }
-
-  @include respond(desktop) {
-    padding-top: 52.442%;
-  }
-
-  @include respond(tab-land) {
-    padding-top: 52.452%;
-  }
-
-  // @include respond(big-desktop) {
-  //   padding-top: 52.452%;
-  // }
 }
 
 .tagline {
