adjust header-bg animation to fill header and add bg linear gradient

--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -9,7 +9,7 @@ footer {
     background-position: 0% 100%;
     background-repeat: no-repeat;
     background-size: contain;
-    //background-attachment:fixed;
+    background-attachment:fixed;
 
 
     @include respond(phone) {
