--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -1,14 +1,14 @@
 footer {
     position:relative;
     z-index:0;
-    height:600px;
+    height: 60rem;
     width: 100%;
     text-align:center;
     background-color:#a8d0e6;
     background-image: url('../../../assets/images/waves.svg');
     background-position: 0% 100%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% 80%;
     background-attachment:fixed;
 
 
@@ -23,12 +23,14 @@ footer .footer {
     -webkit-transform-style:preserve-3d;
     transform-style:preserve-3d;
     left:50%;
+    top: 65%;
     -webkit-transform:translateX(-50%);
     -ms-transform:translateX(-50%);
     transform:translateX(-50%);
     position:fixed;
     bottom: 0rem;
-    height:500px;
+    height: 50rem;
+    width: 100%;
     //padding-top: 15rem;
     text-align:center;
 
