--- a/app/assets/styles/pages/_home.scss
+++ b/app/assets/styles/pages/_home.scss
@@ -14,6 +14,7 @@
     height: 100%;
     max-width: 100%;
     z-index: 1;
+    overflow-y: hidden;
   }
   
   section {
@@ -26,16 +27,16 @@
   a {
     text-decoration: none;
     //color: rgba(255,255,255,0.5);
-    color: #f95759;
+    color: #5f7683;
     outline: 0;
     text-decoration: none !important;
   }
   
-  a:hover, a:active, a:focus {
+  a:hover {
     color: rgba(249, 87, 89, 0.5);
     outline: 0;
     text-decoration: none !important;
-    transition: all 150ms ease;
+    transition: all 100ms ease;
   }
   
   ul {
