add box shadow to bottom of body-project-wrapper, change bg color of ta_overlay, and adjust loading animation starburst line color

--- a/app/assets/styles/components/_loading-animation.scss
+++ b/app/assets/styles/components/_loading-animation.scss
@@ -59,7 +59,7 @@
   .ml8 .circle-white {
     width: 3em;
     height: 3em;
-    border: 2px dashed white;
+    border: 2px dashed #4f7b86;
     border-radius: 2em;
   }
   
