--- a/app/assets/styles/components/_ta-overlay.scss
+++ b/app/assets/styles/components/_ta-overlay.scss
@@ -15,7 +15,7 @@
   fill: #c4dbea;
 }
 .shape-overlays path:nth-of-type(2) {
-  fill: #4c688b;
+  fill: #403c66;
 }
 .shape-overlays path:nth-of-type(3) {
   fill: #2e496a;
@@ -372,7 +372,7 @@ p {
   padding: 0 10px;
   z-index: 1;
   position: relative;
-  background-color: #4c688b;
+  background-color: #403c66;
 }
 .nav-categories {
   padding: 20px 0 30px;
