--- a/app/assets/styles/pages/_home.scss
+++ b/app/assets/styles/pages/_home.scss
@@ -9,7 +9,7 @@
   
   #body-content-wrapper {
     position: relative;
-    //box-shadow:0px 0px 40px rgba(0,0,0,0.8);
+    box-shadow: 0 4px 2px -2px rgba(0,0,0,0.2);
     background-color: #f7f7f7;
     height: 100%;
     max-width: 100%;
