--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -4,7 +4,7 @@ footer {
     height: 60rem;
     width: 100%;
     text-align:center;
-    background-color:#a8d0e6;
+    background-color:#303f80;
     background-image: url('../../../assets/images/waves.svg');
     background-position: 0% 100%;
     background-repeat: no-repeat;
