--- a/app/assets/styles/pages/_home.scss
+++ b/app/assets/styles/pages/_home.scss
@@ -9,7 +9,7 @@
   
   #body-content-wrapper {
     position: relative;
-    box-shadow: 0 4px 2px -2px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
     background-color: #f7f7f7;
     height: 100%;
     max-width: 100%;
@@ -152,7 +152,7 @@
     top: 8px !important;
     left: 0px !important;
     transition: all 0.2s;
-    -webkit-filter: drop-shadow(0px 0px 4px rgba(247, 87, 89, 0.8));
+    //-webkit-filter: drop-shadow(0px 0px 4px rgba(247, 87, 89, 0.8));
   
     &:hover {
       -webkit-filter: drop-shadow(0px 0px 4px rgba(247, 87, 89, 0.8));
