tidy up projects animation and font, mixitup button hover ani, svg animation and add pointer-events: auto to section

--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -19,18 +19,16 @@
 #mix-wrapper {
   z-index: 111;
   position: relative;
-  //pointer-events: none;
+  pointer-events: none;
 }
 
 /* General button style (reset) */
 button {
   border: none;
-  font-family: inherit;
-  font-size: inherit;
   color: $color-grey-dark-3;
-  //background: $color-grey-light-2;
+  background: $color-grey-light-2;
   cursor: pointer !important;
-  padding: 1.7rem 2.2rem 1.7rem 2.2rem !important;
+  padding: 1.3rem 2.2rem !important;
   display: inline-block;
   margin: 0px 0px;
   text-transform: uppercase !important;
@@ -46,10 +44,10 @@ button {
   transition: all 0.3s;
 
   &:hover {
-    background-color: rgba(63, 63, 63, 0.5);
+    background-color: rgba($color-grey-light-2, 0.5);
   }
   &:active {
-    background-color: $color-grey-light-1;
+    background-color: $color-tertiary-light;
   }
 
   @include respond(phone) {
@@ -72,5 +70,5 @@ button:after {
 .button-bar button.button-bar-toggle-btn-active,
 .button-bar button.button-bar-sort-btn-active {
   color: #0e83cd;
-  background: $color-grey-light-2;
+  background: rgba($color-primary-light, .5);
 }
