--- a/app/assets/styles/pages/_home.scss
+++ b/app/assets/styles/pages/_home.scss
@@ -21,7 +21,7 @@
     position: relative;
     z-index: 95;
     //max-width: 100% !important; //for mixitup section width
-    //pointer-events: none;
+    pointer-events: auto;
   }
   
   a {
