--- a/app/assets/styles/components/_header-bg.scss
+++ b/app/assets/styles/components/_header-bg.scss
@@ -4,8 +4,8 @@
   min-height: 100vh;
   background-image: linear-gradient(
     to right bottom,
-    rgba($color-tertiary-light, 0.6),
-    rgba($color-white, 0.6)
+    rgba($color-tertiary-light, 0.3),
+    rgba($color-white, 0.3)
   );
   background-size: cover;
   background-position: top;
@@ -52,7 +52,7 @@ header i {
   margin: 40px;
   padding: 10px;
   float: left;
-  background: $color-secondary-light;
+  background: rgba($color-tertiary-light, .5);
   border-radius: 6px;
   opacity: 1;
   border-bottom: 2px solid #8d8d8d;
