--- a/app/assets/styles/components/_ta-overlay.scss
+++ b/app/assets/styles/components/_ta-overlay.scss
@@ -299,7 +299,7 @@ p {
   z-index: 1002;
   text-align: center;
   font-size: 42px;
-  font-family: "FuturaStd-Book", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: bold;
   opacity: 0;
   color: #fff;
@@ -364,7 +364,7 @@ p {
   z-index: -1;
   background-color: #fff;
   position: absolute;
-  top: 3px;
+  top: 6px;
   -webkit-transform: scaleX(0.3);
   transform: scaleX(0.3);
 }
