add color variables and implement gradient overlay on about section bg-video

--- a/app/assets/styles/abstracts/_variables.scss
+++ b/app/assets/styles/abstracts/_variables.scss
@@ -1,12 +1,14 @@
 //COLORS
 $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
+$color-primary-light-2:#91e6c7;
 $color-primary-dark: #28b485;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 
 $color-tertiary-light: #2998ff;
+$color-tertiary-light-2: #7bbefd;
 $color-tertiary-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
