--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -70,5 +70,5 @@ button:after {
 .button-bar button.button-bar-toggle-btn-active,
 .button-bar button.button-bar-sort-btn-active {
   color: #0e83cd;
-  background: rgba($color-primary-light, .5);
+  background: $color-primary-light-2;
 }
