--- a/app/assets/styles/components/_bg-video.scss
+++ b/app/assets/styles/components/_bg-video.scss
@@ -5,12 +5,28 @@
     height: 100%;
     width: 100%;
     z-index: -1;
-    opacity: .45;
+    opacity: 1;
     overflow: hidden;
+
+    &::before {
+        content: '';
+        position: absolute;
+        background-image: linear-gradient(
+        to right bottom,
+        rgba($color-tertiary-light-2, .8),
+        rgba($color-white, .6)
+        );
+        //border-radius: 5px;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
 
     &__content {
         height: 100%;
         width: 100%;
         object-fit: cover;
+        z-index: -1;
     }
 }
