--- a/app/assets/styles/components/_bg-video.scss
+++ b/app/assets/styles/components/_bg-video.scss
@@ -12,8 +12,8 @@
         content: '';
         position: absolute;
         background-image: linear-gradient(
-        to right bottom,
-        rgba($color-tertiary-light-2, .8),
+        to left bottom,
+        rgba($color-tertiary-light, .8),
         rgba($color-white, .6)
         );
         //border-radius: 5px;
