refactor ta_overlay into nav-menu.scss and add js for subNavItems onClick close menu

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -18,7 +18,7 @@
 @import "components/header-bg";
 @import "components/project-box";
 @import "components/mixitup-button";
-@import "components/ta-overlay";
+@import "components/nav-menu";
 @import "components/bg-video";
 //@import "components/svg-scene";
 
