--- a/app/assets/styles/base/_animations.scss
+++ b/app/assets/styles/base/_animations.scss
@@ -134,6 +134,15 @@
     -webkit-animation-name: bounceIn;
     animation-name: bounceIn;
   }
+
+  @keyframes fade-In {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
   
  
 
