--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -55,8 +55,8 @@
   display: block;
   padding-left: 0;
   padding-right: 0;
-  height: 300px;
-  width: 300px;
+  height: 25rem;
+  width: 25rem;
   border: 10px solid white;
   border-radius: 50%;
   background-size: cover;
