implement iPad portait and landscape media queries pt.2

--- a/app/assets/styles/components/_header-bg.scss
+++ b/app/assets/styles/components/_header-bg.scss
@@ -38,7 +38,10 @@ header .devicons-list-container {
   animation: cascade 500s linear infinite;
 
   @include respond(ipad-port) {
+    height: 2000px;
     width: 3000px;
+    -webkit-animation: cascade 500s linear infinite;
+    animation: cascade 500s linear infinite;
   }
 }
 
