adjust footer for phone responsive media query

--- a/app/assets/styles/components/_bg-video.scss
+++ b/app/assets/styles/components/_bg-video.scss
@@ -13,8 +13,8 @@
         position: absolute;
         background-image: linear-gradient(
         to left bottom,
-        rgba($color-tertiary-light, .8),
-        rgba($color-white, .6)
+        rgba(221,240,243, 1),
+        rgba(221,240,243, .6)
         );
         top: 0;
         right: 0;
