--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -97,6 +97,23 @@ h3.cta {
   }
 }
 
+.bio {
+  font-family: "Georgia", serif;
+  text-align: center;
+  line-height: 1.3em;
+  width: auto;
+  max-width: 780px;
+  display: block;
+  text-rendering: optimizelegibility;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+  color: #fff;
+  font-size: 1.75rem;
+  padding-bottom: 1.25rem;
+}
+
 
 .projects {
   font-family: "Source Sans Pro", sans-serif !important;
