add row id for pointer events for phone responsive media query in footer

--- a/app/assets/styles/pages/_home.scss
+++ b/app/assets/styles/pages/_home.scss
@@ -3,6 +3,7 @@
     background: #fff;
     position: relative;
     z-index: 1;
+    pointer-events: auto;
     //overflow: hidden; /* prevent body overflow when mixitup targets are filtered */
 
   }
