--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -3,7 +3,7 @@
   max-width: 100%;
   margin: 0 auto;
   position: relative;
-
+  pointer-events: auto;
   // &:not(:last-child) {
   //     margin-bottom: $gutter-vertical;
 
@@ -78,6 +78,13 @@
 
   .col-3-of-4 {
     //width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+  }
+}
+
+div#ps {
+  @include respond(phone) {
+    max-width: 100%;
+    pointer-events: auto;
   }
 }
 
